manifests/cluster-addons/media/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Music
    gethomepage.dev/group: Media
    gethomepage.dev/icon: lidarr.png
    gethomepage.dev/name: Lidarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-home
      namespace: tailscale

  hostnames:
    - lidarr.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: lidarr
          port: 8686
